cookbooks/olympus/hestia/frontend_infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "zeus-cloud"
  labels:
    app.kubernetes.io/instance: "zeus-cloud"
    app.kubernetes.io/name: "zeus-cloud"
    app.kubernetes.io/managed-by: "zeus"
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: http-api
      protocol: TCP
      name: http-api
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: "zeus-cloud"
    app.kubernetes.io/name: "zeus-cloud"
