cookbooks/olympus/hestia/frontend_infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "zeus-cloud"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: zeus-cloud-tls
      hosts:
        - cloud.zeus.fyi
  rules:
    - host: cloud.zeus.fyi
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: zeus-cloud
                port:
                  number: 80
